--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-torch==2.5.1
+--extra-index-url https://download.pytorch.org/whl/cu118
+torch==2.5.1+cu118
+pytorch-lightning==2.5.0.post0
+matplotlib==3.10.0
 typer==0.15.1
 fastapi==0.115.6
 uvicorn==0.34.0
+numpy==2.2.1
