--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
---extra-index-url https://download.pytorch.org/whl/cu118
+# --extra-index-url https://download.pytorch.org/whl/cu118 This link must be included when intalling requirements: ( pip install -r requirements.txt --extra-index-url https://download.pytorch.org/whl/cu118 )
 torch==2.5.1+cu118
 pytorch-lightning==2.5.0.post0
 matplotlib==3.10.0
