--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # --extra-index-url https://download.pytorch.org/whl/cu118 This link must be included when intalling requirements: ( pip install -r requirements.txt --extra-index-url https://download.pytorch.org/whl/cu118 )
 torch==2.5.1+cu118
+torchvision==0.20.1+cu118
 pytorch-lightning==2.5.0.post0
 matplotlib==3.10.0
 typer==0.15.1
