--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,8 @@
 [core]
-    remote = storage
-['remote "storage"']
-    url = gdrive://1ORHTGXdo0PE44MzI9jW0_LMHX344PA-S
+    remote = remote_storage
+#['remote "storage"']
+#    url = gdrive://1ORHTGXdo0PE44MzI9jW0_LMHX344PA-S
+#    gdrive_user_credentials_file = /Users/ceciliehvilsted/.dvc/gdrive_user_credentials.json
+['remote "remote_storage"']
+    url = gs://fruits_vegetables_dataset/
+    version_aware = true
