--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -U pip setuptools wheel
-          pip install -r requirements.txt --extra-index-url https://download.pytorch.org/whl/cu118
+          pip install -r requirements.txt
           pip list
 
 
