--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ dev = {file = ['requirements_dev.txt']}
 
 [tool.ruff]
 line-length = 120
-select = ["I"]
+lint.select = ["I"]
 
 [tool.mypy]
 ignore_missing_imports = true
