--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -32,6 +32,9 @@ jobs:
           python -m pip install -U pip setuptools wheel
           pip install -r requirements.txt -r requirements_test.txt
           pip list
+      
+      - name: Clean Temporary Files
+        run: rm -rf /private/var/folders/ml/
 
 
       - name: Run tests & coverage
