--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -32,6 +32,10 @@ jobs:
           python -m pip install -U pip setuptools wheel
           pip install -r requirements.txt -r requirements_test.txt
           pip list
+      
+      - name: Install package
+        run: |
+          pip install -e .
 
       - name: Run tests & coverage
         run: |
