--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,21 @@
 # --extra-index-url https://download.pytorch.org/whl/cu118 This link must be included when intalling requirements: ( pip install -r requirements.txt --extra-index-url https://download.pytorch.org/whl/cu118 )
+anyio==4.8.0
+fastapi==0.115.6
+hydra-core==1.3.2
+invoke==2.2.0
+kagglehub==0.3.6
+loguru==0.7.3
+Markdown==3.7
+matplotlib==3.10.0
+numpy==2.2.1
+Pillow==11.1.0
+pydantic==2.10.5
+pytorch_lightning==2.5.0.post0
+python-multipart==0.0.20
+timm==1.0.13
 torch==2.5.1
 torchvision==0.20.1
-pytorch-lightning==2.5.0.post0
-matplotlib==3.10.0
+transformers==4.48.0
 typer==0.15.1
-fastapi==0.115.6
-uvicorn==0.34.0
-numpy==2.2.1
-timm==1.0.13
-kagglehub==0.3.6
 wandb==0.19.2
-loguru==0.7.3
-hydra-core==1.3.2
+uvicorn==0.34.0
