--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ fastapi==0.115.6
 hydra-core==1.3.2
 invoke==2.2.0
 kagglehub==0.3.6
+locust==2.32.6
 loguru==0.7.3
 Markdown==3.7
 matplotlib==3.10.0
