--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ loguru==0.7.3
 Markdown==3.7
 matplotlib==3.10.0
 numpy==2.2.1
+onnxruntime==1.20.1
 Pillow==11.1.0
 pydantic==2.10.5
 pytorch_lightning==2.5.0.post0
