--- a/cloudbuild_frontend.yaml
+++ b/cloudbuild_frontend.yaml
@@ -1,26 +1,40 @@
 steps:
-  # Step 1: Build the Docker image for the frontend
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'europe-west1-docker.pkg.dev/premium-portal-447810-a6/group5-repo/frontend:latest', '.']
+# Step 1: Build the Docker image for the frontend
+- name: 'gcr.io/cloud-builders/docker'
+  id: 'Build Frontend Container Image'
+  args: [
+    'build',
+    '.',
+    '-t',
+    'europe-west1-docker.pkg.dev/premium-portal-447810-a6/group5-repo/frontend_image',
+    '-f',
+    'dockerfiles/frontend.dockerfile'
+  ]
 
-  # Step 2: Push the Docker image to Artifact Registry
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'europe-west1-docker.pkg.dev/premium-portal-447810-a6/group5-repo/frontend:latest']
+# Step 2: Push the Docker image to Artifact Registry
+- name: 'gcr.io/cloud-builders/docker'
+  id: 'Push Frontend Container Image'
+  args: [
+    'push',
+    'europe-west1-docker.pkg.dev/premium-portal-447810-a6/group5-repo/frontend_image'
+  ]
 
-  # Step 3: Deploy the image to Cloud Run
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    entrypoint: 'gcloud'
-    args:
-      - 'run'
-      - 'deploy'
-      - 'frontend'
-      - '--image'
-      - 'europe-west1-docker.pkg.dev/premium-portal-447810-a6/group5-repo/frontend:latest'
-      - '--region'
-      - 'europe-west1'
-      - '--platform'
-      - 'managed'
-      - '--allow-unauthenticated'
+# Step 3: Deploy the frontend image to Cloud Run
+- name: 'gcr.io/cloud-builders/gcloud'
+  id: 'Deploy Frontend to Cloud Run'
+  args: [
+    'run',
+    'deploy',
+    'frontend',
+    '--image',
+    'europe-west1-docker.pkg.dev/premium-portal-447810-a6/group5-repo/frontend_image',
+    '--region',
+    'europe-west1',
+    '--platform',
+    'managed',
+    '--allow-unauthenticated'
+  ]
 
-images:
-  - 'europe-west1-docker.pkg.dev/premium-portal-447810-a6/group5-repo/frontend:latest'
+# Options for logging
+options:
+  logging: CLOUD_LOGGING_ONLY
